[package]
name = "cargo-user"
description = "A Cargo plugin for managing multiple sets of credentials."
version = "0.2.1"
edition = "2021"

authors = ["JS Dreim <jsdreim@protonmail.com>"]
repository = "https://github.com/jsdreim/cargo-user"

readme = "README.md"
documentation = "https://docs.rs/cargo-user"
license = "Apache-2.0"

exclude = ["/.idea"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cargo", "cli", "plugin", "utility"]


[dependencies]
clap = { version = "3.1.10", features = ["cargo", "derive"] }
directories = "4.0"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
